--- a/travelocity/src/componants/rooms.module.css
+++ b/travelocity/src/componants/rooms.module.css
@@ -19,17 +19,22 @@
 button {
   background: #2e5bb9;
   padding: 6px;
+  height: 40px;
   width: 120px;
   color: white;
   font-weight: bold;
+  border: none;
   font-size: large;
   border-radius: 10px;
 }
 
-.btndiv {
+.btndiv > div {
   margin-top: 15px;
   display: flex;
   justify-content: space-between;
+}
+.btndiv h1 {
+  margin-top: -10px;
 }
 .icon {
   width: auto;
@@ -41,8 +46,20 @@ button {
   width: 20px;
 }
 .headers {
+  width: 40%;
+  margin-left: 180px;
   display: flex;
   justify-content: space-between;
+}
+
+.headers > h3:hover {
+  color: #2e5bb9;
+}
+.headers > h3 {
+  margin-top: 12px;
+}
+.headers > p:hover {
+  color: #2e5bb9;
 }
 .extras > div {
   display: flex;
@@ -50,11 +67,13 @@ button {
 }
 .extras > div > div {
   padding: 5px;
-
   display: flex;
   justify-content: space-around;
 }
-
+.extras p {
+  margin-top: -5px;
+  margin-left: 5px;
+}
 a {
   text-decoration: none;
   color: #2e5bb9;
@@ -62,38 +81,67 @@ a {
 }
 
 /* photos.jsx styles */
-.imggrid img {
-  width: 400px;
-  height: 200px;
-}
+
 .imggrid {
-  width: 90%;
-  height: 300px;
-  margin: auto;
-  padding-top: 30px;
-  display: grid;
-  line-height: 10px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, auto);
-  row-gap: 10px;
-  column-gap: 10px;
-  grid-template-areas:
-    "A A B C"
-    "A A D E";
+  width: 70%;
+  display: flex;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  margin-left: 180px;
 }
 
 #a {
-  grid-area: A;
+  width: 700px;
+  height: 350px;
+  margin-right: 0.5%;
 }
 #b {
-  grid-area: B;
+  width: 400px;
+  height: 200px;
 }
-#c {
-  grid-area: C;
+#b img {
+  height: 100%;
+  width: 100%;
 }
-#d {
-  grid-area: D;
+.grid {
+  display: grid;
+  gap: 0.8%;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
 }
-#e {
-  grid-area: E;
+
+/* details page css */
+
+.maindiv {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  width: 70%;
+  padding: 2%;
+  margin: auto;
+  margin-top: 20px;
+}
+.heading {
+  width: 60%;
+}
+
+.maindiv {
+  display: flex;
+}
+
+.map {
+  display: flex;
+  gap: 20px;
+  width: 350px;
+}
+.map p {
+  margin-top: -2px;
+  margin-left: 5px;
+}
+.maindiv img {
+  height: 25px;
+  width: 25px;
+}
+
+.div1 {
+  display: flex;
+  gap: 150px;
 }
